# finance

./: .gitignore  .pre-commit-config.yaml  README.md  hermes_market_data.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: bench.py  bench_results.json  bench_results.md
src/hermes_market/: __init__.py  cache.py  cli.py  enricher.py  fetcher.py  models.py  normalize.py  runner.py  server.py  symbol_index.py  tool_spec.py  utils.py
src/hermes_market/providers/: __init__.py  akshare_provider.py  baostock_provider.py  sina_rss.py  stooq_provider.py  xueqiu_provider.py  yfinance_provider.py
tests/: test_akshare_provider.py  test_batch_quote.py  test_cli.py  test_enricher.py  test_fetcher.py  test_fetcher_timeout.py  test_models.py  test_normalize.py  test_runner.py  test_server.py  test_smoke_live.py  test_stooq_provider.py  test_symbol_index.py  test_tool_spec.py
tools/: hermes_tools.anthropic.json  hermes_tools.mcp.json  hermes_tools.openai.json  output_schemas.json
