[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-market"
version = "0.2.0"
description = "Free A-share / HK-share market data fetcher with multi-provider fallback for Hermes agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ply80227-jpg" }]
dependencies = [
    "akshare",
    "yfinance",
    "baostock",
    "pandas",
    "pandas-datareader",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "pre-commit>=3",
]

[project.scripts]
hermes-market = "hermes_market.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
ignore = [
    "E501", # handled by formatter
    "B008", # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["hermes_market"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
